# learning_project

./: .gitignore  README.md  fix-untracked-dirs.sh  git-log-export.txt
Judge/: README.md
Judge/ide/: lsp.h
Judge/util/: file.h
agent_template/: README.md  pom.xml
clash_for_linux/: README.md  install.sh  uninstall.sh
clash_for_linux/resources/: mixin.yaml
clash_for_linux/script/: clashctl.fish  clashctl.sh  common.sh
cloud_gallery_collaboration/backend/: pom.xml
cplus/Judge/: .clangd  CMakeLists.txt
cplus/Judge/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
cplus/Judge/ide/: aiChat.cpp  aiChat.h  cmd.h  highlighter.cpp  highlighter.h  ide.h  language.cpp  language.h  lsp.h  project.h
cplus/Judge/util/: script.h
cursor_mcp/: README.md  agent.pptx
cursor_mcp/hn-server/: pnpm-lock.yaml
cursor_mcp/mcp-client/: pyproject.toml  server.py
cursor_mcp/weather/: README.md  langgpt_generator.py  mcp_expert_prompt.md  prompt.md  requirements.txt  weather.py
drug/: README.md  app.py  dataset.py  inference.py  model.py  requirements.txt  train.py
fastapi-htmx-daisyui/: README.md
finda/: README.md  eslint.config.js  jest.config.js  package.json  tailwind.config.js  vite.config.js  vite.config.ts
finda/src/: App.tsx  (+3 more)
flutter_basics/: README.md  pubspec.yaml
gemini-cli/: README.md
judge/: main.cpp
langchain_template/: README.md  pom.xml
lanlan/: README.md
live/: README.md  go.mod  go.sum  package.json
love/: README.md  pubspec.yaml
map/: README.md
melba/: README.md
mihomo/: README.md
mihoyo/: README.md
minimind/: eval_model.py  readme.md  requirements.txt  train_lora.py
minimind-v/: README.md  eval_vlm.py
origin_predict/: README.md  Software_Defect_Prediction_Analysis.ipynb  Software_Defect_Prediction_Analysis.py  model_analysis.py  requirements.txt  simple_ui.py  ui.py
pineapple/: README.md
quarkdown/: README.md
qwen_vl/: README.md  chat_template.jinja  cocoqa_train.yaml  full_train.yaml  train.py  utils.py
react_swc_template/: README.md  eslint.config.js  package.json  tailwind.config.js  vite.config.ts
screenshare/: README.md
script/: github_star_repo.py
supervise_gpt/: config.py  test.py
xray/: app.py  main.py  train_autoencoder.py
(+858 files in other folders)
